# minimal_l18n

./: README.md  local_install_build.sh  main.c  meson.build  run.sh
include/: printers.h  translations.h
po/: LINGUAS  POTFILES  en.po  en_US.po  es.po  main.pot  meson.build  miniI18n.pot
src/: main.c  meson.build  printers.c
